# Play-Pulse

./: .gitignore  README.md  app.py  main.ipynb  pyproject.toml  requirements.txt
datasets/: Console Sales Data Monthwise.xlsx  Laptop Sales Data Monthwise.xlsx  PC Sales Data Monthwise.xlsx  consoles.csv  games.csv  laptops.csv  pcs.csv
play_pulse/: __init__.py  analysis.py  app.py  dashboard.py  types.py
