[project]
name = "sales_analysis"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Beast", email = "amansoudagar@gmail.com"},
]
dependencies = [
    "plotly>=5.24.1",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "streamlit>=1.41.0",
    "matplotlib>=3.9.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
