[tool.poetry]
name = "sales_analysis"
version = "0.1.0"
description = "Default template for PDM package"
authors = ["Beast <amansoudagar@gmail.com>"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.13"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
plotly = "^5.24.1"
numpy = "^2.2.0"
pandas = "^2.2.3"
streamlit = "^1.41.0"
matplotlib = "^3.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
