[tool.poetry]
name = "sales_analysis"
version = "0.1.0"
description = "Comprehensive analysis of computer sales data, providing valuable insights and trends."
authors = ["Beast <amansoudagar@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
scikit-learn = "^1.6.0"
statsmodels = "^0.14.4"
pandas = "^2.2.3"
plotly = "^5.24.1"
streamlit = "^1.41.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
